Changed depreciated newInstance to getDeclaredConstructor().newInstance()